Tue May 27 19:55:28 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:
        * tests/DCPS/Messenger/DataReaderListener.cpp:

          Added validation of subject_id.

Tue May 27 19:18:38 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:
        * tests/DCPS/Messenger/DataReaderListener.cpp:

          Changed subscriber to expect from to be "Comic Book Guy" or "OpenDDS-Java".

Tue May 27 17:43:43 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:
        * java/tests/messenger/subscriber/TestSubscriber.java:

          Cleaned up fuzz errors.

Tue May 27 17:30:45 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/both/Both.java:
        * java/tests/messenger/publisher/TestPublisher.java:
        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:
        * java/tests/messenger/subscriber/TestSubscriber.java:

          Changed to match cpp published and expected data.

Tue May 27 17:20:55 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/LargeSample/DataReaderListener.h:
        * tests/DCPS/LargeSample/DataReaderListener.cpp:

          Returning correct failure status for subscriber.cpp.

        * tests/DCPS/LargeSample/Messenger.idl:

          Changed idl order to make garbled data more evident.

        * tests/DCPS/LargeSample/Writer.cpp:

          Added reporting data that is being sent for debugging.

        * tests/DCPS/Reliability/sub/Subscriber.cpp:

          Cleaned up indentation.

Sat May 24 11:14:33 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Messenger/DataReaderListener.cpp:

          Fixed warnings and fuzz errors.

Fri May 23 19:05:54 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Messenger/Args.h: