@@ -1,3 +1,9 @@
+Tue May 27 20:00:51 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
+
+        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:
+
+          Reporting failing value.
+
 Tue May 27 19:55:28 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * java/tests/messenger/subscriber/DataReaderListenerImpl.java:
